src/test/deca/syntax/invalid/sansobjet/lex_symbspeciaux_valid.deca
//lex_symbspeciaux_valid.deca:4:0: no viable alternative at input '+'
//Descritpion: Test des symboles speciaux
//Resultats : un token par symboles
+ - < > <= >= ! = == != * % / && ||
